fix: Fixed misc code. Code cleanup.
Signed-off-by: dhoard <doug.hoard@gmail.com>