@@ -30,6 +30,7 @@ import io.prometheus.jmx.test.support.http.HttpResponse;
 import io.prometheus.jmx.test.support.metrics.Metric;
 import io.prometheus.jmx.test.support.metrics.MetricsContentType;
 import io.prometheus.jmx.test.support.metrics.MetricsParser;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
@@ -37,177 +38,115 @@ import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ThreadLocalRandom;
-import org.paramixel.core.Action;
-import org.paramixel.core.Context;
-import org.paramixel.core.Factory;
-import org.paramixel.core.Paramixel;
-import org.paramixel.core.action.Container;
-import org.paramixel.core.action.Direct;
-import org.paramixel.core.action.Parallel;
-import org.paramixel.core.support.Cleanup;
-import org.testcontainers.containers.Network;
+import java.util.stream.Collectors;
+import org.paramixel.api.Paramixel;
+import org.paramixel.api.Runner;
+import org.paramixel.api.action.Instance;
+import org.paramixel.api.action.Lifecycle;
+import org.paramixel.api.action.Parallel;
+import org.paramixel.api.action.Spec;
 
 public class ExcludeJvmMetricsTest {
 
-    private static final String ENVIRONMENT_KEY = "environment";
-    private static final String NETWORK_KEY = "network";
-
     private static final int ITERATIONS = 10;
 
-    public static void main(String[] args) {
-        Factory.defaultRunner().runAndExit(actionFactory());
+    private final JmxExporterTestEnvironment environment;
+
+    public static void main(String[] args) throws Throwable {
+        Runner.defaultRunner().runAndExit(factory());
     }
 
-    @Paramixel.ActionFactory
-    public static Action actionFactory() {
-        var parallelBuilder = Parallel.builder(ExcludeJvmMetricsTest.class.getName());
-        for (JmxExporterTestEnvironment environment : JmxExporterTestEnvironment.createEnvironments()
+    @Paramixel.Factory
+    public static Spec<?> factory() throws Throwable {
+        var environments = JmxExporterTestEnvironment.createTestEnvironments(ExcludeJvmMetricsTest.class).stream()
                 .filter(exporterTestEnvironment ->
                         exporterTestEnvironment.getJmxExporterMode() == JmxExporterMode.JavaAgent)
-                .toList()) {
-            parallelBuilder.child(argument(environment));
+                .collect(Collectors.toList());
+
+        return Parallel.of(ExcludeJvmMetricsTest.class.getName())
+                .each(
+                        environments,
+                        environment -> Instance.of(environment.name(), () -> new ExcludeJvmMetricsTest(environment))
+                                .child(Lifecycle.<ExcludeJvmMetricsTest>of("lifecycle")
+                                        .before("setUp()", ExcludeJvmMetricsTest::setUp)
+                                        .child("testHealthy()", ExcludeJvmMetricsTest::testHealthy)
+                                        .child(
+                                                "testDefaultTextMetrics()",
+                                                ExcludeJvmMetricsTest::testDefaultTextMetrics)
+                                        .child(
+                                                "testOpenMetricsTextMetrics()",
+                                                ExcludeJvmMetricsTest::testOpenMetricsTextMetrics)
+                                        .child(
+                                                "testPrometheusTextMetrics()",
+                                                ExcludeJvmMetricsTest::testPrometheusTextMetrics)
+                                        .child(
+                                                "testPrometheusProtobufMetrics()",
+                                                ExcludeJvmMetricsTest::testPrometheusProtobufMetrics)
+                                        .after("tearDown()", ExcludeJvmMetricsTest::tearDown)));
+    }
+
+    private ExcludeJvmMetricsTest(JmxExporterTestEnvironment environment) {
+        this.environment = environment;
+    }
+
+    public void setUp() throws Throwable {
+        environment.initialize();
+    }
+
+    public void testHealthy() throws IOException {
+        String url = environment.getUrl(JmxExporterPath.HEALTHY);
+        HttpResponse httpResponse = HttpClient.sendRequest(url);
+        assertHealthyResponse(httpResponse);
+    }
+
+    public void testDefaultTextMetrics() throws Exception {
+        String url = environment.getUrl(JmxExporterPath.METRICS);
+
+        for (int i = 0; i < ITERATIONS; i++) {
+            Thread.sleep(ThreadLocalRandom.current().nextLong(0, 101));
+            HttpResponse httpResponse = HttpClient.sendRequest(url);
+            assertMetricsResponse(httpResponse, MetricsContentType.DEFAULT);
         }
-        return parallelBuilder.build();
     }
 
-    private static Action argument(JmxExporterTestEnvironment jmxExporterTestEnvironment) {
-        Action setUp = setUp(jmxExporterTestEnvironment);
-        Action testHealthy = testHealthy();
-        Action testDefaultTextMetrics = testDefaultTextMetrics();
-        Action testOpenMetricsTextMetrics = testOpenMetricsTextMetrics();
-        Action testPrometheusTextMetrics = testPrometheusTextMetrics();
-        Action testPrometheusProtobufMetrics = testPrometheusProtobufMetrics();
-        Action tearDown = tearDown();
+    public void testOpenMetricsTextMetrics() throws Exception {
+        String url = environment.getUrl(JmxExporterPath.METRICS);
 
-        return Container.builder(jmxExporterTestEnvironment.getName())
-                .before(setUp)
-                .child(testHealthy)
-                .child(testDefaultTextMetrics)
-                .child(testOpenMetricsTextMetrics)
-                .child(testPrometheusTextMetrics)
-                .child(testPrometheusProtobufMetrics)
-                .after(tearDown)
-                .build();
+        for (int i = 0; i < ITERATIONS; i++) {
+            Thread.sleep(ThreadLocalRandom.current().nextLong(0, 101));
+            HttpResponse httpResponse = HttpClient.sendRequest(
+                    url, HttpHeader.ACCEPT, MetricsContentType.OPEN_METRICS_TEXT_METRICS.toString());
+            assertMetricsResponse(httpResponse, MetricsContentType.OPEN_METRICS_TEXT_METRICS);
+        }
     }
 
-    private static Action setUp(JmxExporterTestEnvironment jmxExporterTestEnvironment) {
-        return Direct.builder("setUp")
-                .runnable(context -> {
-                    Network network = Network.newNetwork();
-                    network.getId();
-                    jmxExporterTestEnvironment.initialize(ExcludeJvmMetricsTest.class, network);
-                    var store = context.getStore();
-                    store.put(NETWORK_KEY, network);
-                    store.put(ENVIRONMENT_KEY, jmxExporterTestEnvironment);
-                })
-                .build();
+    public void testPrometheusTextMetrics() throws Exception {
+        String url = environment.getUrl(JmxExporterPath.METRICS);
+
+        for (int i = 0; i < ITERATIONS; i++) {
+            Thread.sleep(ThreadLocalRandom.current().nextLong(0, 101));
+            HttpResponse httpResponse = HttpClient.sendRequest(
+                    url, HttpHeader.ACCEPT, MetricsContentType.PROMETHEUS_TEXT_METRICS.toString());
+            assertMetricsResponse(httpResponse, MetricsContentType.PROMETHEUS_TEXT_METRICS);
+        }
     }
 
-    private static Action testHealthy() {
-        return Direct.builder("testHealthy")
-                .runnable(context -> {
-                    JmxExporterTestEnvironment environment = getEnvironment(context);
-                    String url = environment.getUrl(JmxExporterPath.HEALTHY);
-                    HttpResponse httpResponse = HttpClient.sendRequest(url);
-                    assertHealthyResponse(httpResponse);
-                })
-                .build();
+    public void testPrometheusProtobufMetrics() throws Exception {
+        String url = environment.getUrl(JmxExporterPath.METRICS);
+
+        for (int i = 0; i < ITERATIONS; i++) {
+            Thread.sleep(ThreadLocalRandom.current().nextLong(0, 101));
+            HttpResponse httpResponse = HttpClient.sendRequest(
+                    url, HttpHeader.ACCEPT, MetricsContentType.PROMETHEUS_PROTOBUF_METRICS.toString());
+            assertMetricsResponse(httpResponse, MetricsContentType.PROMETHEUS_PROTOBUF_METRICS);
+        }
     }
 
-    private static Action testDefaultTextMetrics() {
-        return Direct.builder("testDefaultTextMetrics")
-                .runnable(context -> {
-                    JmxExporterTestEnvironment environment = getEnvironment(context);
-                    String url = environment.getUrl(JmxExporterPath.METRICS);
-
-                    for (int i = 0; i < ITERATIONS; i++) {
-                        Thread.sleep(ThreadLocalRandom.current().nextLong(0, 101));
-                        HttpResponse httpResponse = HttpClient.sendRequest(url);
-                        assertMetricsResponse(environment, httpResponse, MetricsContentType.DEFAULT);
-                    }
-                })
-                .build();
+    public void tearDown() {
+        environment.close();
     }
 
-    private static Action testOpenMetricsTextMetrics() {
-        return Direct.builder("testOpenMetricsTextMetrics")
-                .runnable(context -> {
-                    JmxExporterTestEnvironment environment = getEnvironment(context);
-                    String url = environment.getUrl(JmxExporterPath.METRICS);
-
-                    for (int i = 0; i < ITERATIONS; i++) {
-                        Thread.sleep(ThreadLocalRandom.current().nextLong(0, 101));
-                        HttpResponse httpResponse = HttpClient.sendRequest(
-                                url, HttpHeader.ACCEPT, MetricsContentType.OPEN_METRICS_TEXT_METRICS.toString());
-                        assertMetricsResponse(environment, httpResponse, MetricsContentType.OPEN_METRICS_TEXT_METRICS);
-                    }
-                })
-                .build();
-    }
-
-    private static Action testPrometheusTextMetrics() {
-        return Direct.builder("testPrometheusTextMetrics")
-                .runnable(context -> {
-                    JmxExporterTestEnvironment environment = getEnvironment(context);
-                    String url = environment.getUrl(JmxExporterPath.METRICS);
-
-                    for (int i = 0; i < ITERATIONS; i++) {
-                        Thread.sleep(ThreadLocalRandom.current().nextLong(0, 101));
-                        HttpResponse httpResponse = HttpClient.sendRequest(
-                                url, HttpHeader.ACCEPT, MetricsContentType.PROMETHEUS_TEXT_METRICS.toString());
-                        assertMetricsResponse(environment, httpResponse, MetricsContentType.PROMETHEUS_TEXT_METRICS);
-                    }
-                })
-                .build();
-    }
-
-    private static Action testPrometheusProtobufMetrics() {
-        return Direct.builder("testPrometheusProtobufMetrics")
-                .runnable(context -> {
-                    JmxExporterTestEnvironment environment = getEnvironment(context);
-                    String url = environment.getUrl(JmxExporterPath.METRICS);
-
-                    for (int i = 0; i < ITERATIONS; i++) {
-                        Thread.sleep(ThreadLocalRandom.current().nextLong(0, 101));
-                        HttpResponse httpResponse = HttpClient.sendRequest(
-                                url, HttpHeader.ACCEPT, MetricsContentType.PROMETHEUS_PROTOBUF_METRICS.toString());
-                        assertMetricsResponse(
-                                environment, httpResponse, MetricsContentType.PROMETHEUS_PROTOBUF_METRICS);
-                    }
-                })
-                .build();
-    }
-
-    private static Action tearDown() {
-        return Direct.builder("tearDown")
-                .runnable(context -> {
-                    var store = context.getStore();
-                    Network network = store.remove(NETWORK_KEY, Network.class).orElse(null);
-                    JmxExporterTestEnvironment environment = store.remove(
-                                    ENVIRONMENT_KEY, JmxExporterTestEnvironment.class)
-                            .orElse(null);
-
-                    if (network != null && environment != null) {
-                        Cleanup.of(Cleanup.Mode.FORWARD)
-                                .addCloseable(environment)
-                                .addCloseable(network)
-                                .runAndThrow();
-                    }
-                })
-                .build();
-    }
-
-    private static JmxExporterTestEnvironment getEnvironment(Context context) {
-        return context.getParent()
-                .getStore()
-                .get(ENVIRONMENT_KEY, JmxExporterTestEnvironment.class)
-                .orElseThrow();
-    }
-
-    private static void assertMetricsResponse(
-            JmxExporterTestEnvironment jmxExporterTestEnvironment,
-            HttpResponse httpResponse,
-            MetricsContentType metricsContentType)
+    private void assertMetricsResponse(HttpResponse httpResponse, MetricsContentType metricsContentType)
             throws Exception {
         assertMetricsContentType(httpResponse, metricsContentType);
 
@@ -223,7 +162,7 @@ public class ExcludeJvmMetricsTest {
             metrics.computeIfAbsent(name, k -> new ArrayList<>()).add(metric);
         });
 
-        String buildInfoName = jmxExporterTestEnvironment.getJmxExporterMode().getBuildInfoName();
+        String buildInfoName = environment.getJmxExporterMode().getBuildInfoName();
 
         assertMetric(metrics)
                 .ofType(Metric.Type.GAUGE)
