@@ -30,23 +30,18 @@ import io.prometheus.jmx.test.support.http.HttpResponse;
 import io.prometheus.jmx.test.support.metrics.Metric;
 import io.prometheus.jmx.test.support.metrics.MetricsContentType;
 import io.prometheus.jmx.test.support.metrics.MetricsParser;
+import java.io.IOException;
 import java.util.Collection;
 import java.util.Map;
-import org.paramixel.core.Action;
-import org.paramixel.core.Context;
-import org.paramixel.core.Factory;
-import org.paramixel.core.Paramixel;
-import org.paramixel.core.action.Container;
-import org.paramixel.core.action.Direct;
-import org.paramixel.core.action.Parallel;
-import org.paramixel.core.support.Cleanup;
-import org.testcontainers.containers.Network;
+import java.util.stream.Collectors;
+import org.paramixel.api.Paramixel;
+import org.paramixel.api.Runner;
+import org.paramixel.api.action.Instance;
+import org.paramixel.api.action.Lifecycle;
+import org.paramixel.api.action.Parallel;
+import org.paramixel.api.action.Spec;
 
 public class CompleteHttpServerConfigurationTest {
-
-    private static final String ENVIRONMENT_KEY = "environment";
-
-    private static final String NETWORK_KEY = "network";
 
     private static final String BASE_URL = "https://localhost";
 
@@ -58,257 +53,196 @@ public class CompleteHttpServerConfigurationTest {
 
     private static final String[] TEST_PASSWORDS = new String[] {VALID_PASSWORD, "Secret", "bad", "", null};
 
-    public static void main(String[] args) {
-        Factory.defaultRunner().runAndExit(actionFactory());
+    private final JmxExporterTestEnvironment environment;
+
+    private CompleteHttpServerConfigurationTest(JmxExporterTestEnvironment environment) {
+        this.environment = environment;
     }
 
-    @Paramixel.ActionFactory
-    public static Action actionFactory() {
-        var parallelBuilder = Parallel.builder(CompleteHttpServerConfigurationTest.class.getName());
-        for (JmxExporterTestEnvironment environment : JmxExporterTestEnvironment.createEnvironments()
-                .filter(e -> !e.getJavaDockerImage().contains("eclipse-temurin:8-alpine"))
-                .map(e -> e.setBaseUrl(BASE_URL))
-                .toList()) {
-            parallelBuilder.child(argument(environment));
+    public static void main(String[] args) throws Throwable {
+        Runner.defaultRunner().runAndExit(factory());
+    }
+
+    @Paramixel.Factory
+    public static Spec<?> factory() throws Throwable {
+        var environments =
+                JmxExporterTestEnvironment.createTestEnvironments(CompleteHttpServerConfigurationTest.class).stream()
+                        .filter(e -> !e.getJavaDockerImage().contains("eclipse-temurin:8-alpine"))
+                        .map(e -> e.setBaseUrl(BASE_URL))
+                        .collect(Collectors.toList());
+
+        return Parallel.of(CompleteHttpServerConfigurationTest.class.getName())
+                .each(
+                        environments,
+                        env -> Instance.of(env.name(), () -> new CompleteHttpServerConfigurationTest(env))
+                                .child(Lifecycle.<CompleteHttpServerConfigurationTest>of("lifecycle")
+                                        .before("setUp()", CompleteHttpServerConfigurationTest::setUp)
+                                        .child("testHealthy()", CompleteHttpServerConfigurationTest::testHealthy)
+                                        .child(
+                                                "testDefaultTextMetrics()",
+                                                CompleteHttpServerConfigurationTest::testDefaultTextMetrics)
+                                        .child(
+                                                "testOpenMetricsTextMetrics()",
+                                                CompleteHttpServerConfigurationTest::testOpenMetricsTextMetrics)
+                                        .child(
+                                                "testPrometheusTextMetrics()",
+                                                CompleteHttpServerConfigurationTest::testPrometheusTextMetrics)
+                                        .child(
+                                                "testPrometheusProtobufMetrics()",
+                                                CompleteHttpServerConfigurationTest::testPrometheusProtobufMetrics)
+                                        .after("tearDown()", CompleteHttpServerConfigurationTest::tearDown)));
+    }
+
+    public void setUp() throws Throwable {
+        environment.initialize();
+    }
+
+    public void testHealthy() throws IOException {
+        String url = environment.getUrl(JmxExporterPath.HEALTHY);
+
+        for (String username : TEST_USERNAMES) {
+            for (String password : TEST_PASSWORDS) {
+                int expectedStatusCode = 401;
+
+                if (VALID_USERNAME.equals(username) && VALID_PASSWORD.equals(password)) {
+                    expectedStatusCode = 200;
+                }
+
+                HttpRequest httpRequest = HttpRequest.builder()
+                        .url(url)
+                        .basicAuthentication(username, password)
+                        .build();
+
+                HttpResponse httpResponse = HttpClient.sendRequest(httpRequest);
+
+                assertThat(httpResponse.statusCode()).isEqualTo(expectedStatusCode);
+            }
         }
-        return parallelBuilder.build();
     }
 
-    private static Action argument(JmxExporterTestEnvironment environment) {
-        Action setUp = setUp(environment);
-        Action testHealthy = testHealthy();
-        Action testDefaultTextMetrics = testDefaultTextMetrics();
-        Action testOpenMetricsTextMetrics = testOpenMetricsTextMetrics();
-        Action testPrometheusTextMetrics = testPrometheusTextMetrics();
-        Action testPrometheusProtobufMetrics = testPrometheusProtobufMetrics();
-        Action tearDown = tearDown();
+    public void testDefaultTextMetrics() throws IOException {
+        String url = environment.getUrl(JmxExporterPath.METRICS);
 
-        return Container.builder(environment.getName())
-                .before(setUp)
-                .child(testHealthy)
-                .child(testDefaultTextMetrics)
-                .child(testOpenMetricsTextMetrics)
-                .child(testPrometheusTextMetrics)
-                .child(testPrometheusProtobufMetrics)
-                .after(tearDown)
-                .build();
+        for (String username : TEST_USERNAMES) {
+            for (String password : TEST_PASSWORDS) {
+                int expectedStatusCode = 401;
+
+                if (VALID_USERNAME.equals(username) && VALID_PASSWORD.equals(password)) {
+                    expectedStatusCode = 200;
+                }
+
+                HttpRequest httpRequest = HttpRequest.builder()
+                        .url(url)
+                        .basicAuthentication(username, password)
+                        .build();
+
+                HttpResponse httpResponse = HttpClient.sendRequest(httpRequest);
+
+                if (expectedStatusCode == 401) {
+                    assertThat(httpResponse.statusCode()).isEqualTo(401);
+                } else {
+                    assertMetricsResponse(httpResponse, MetricsContentType.DEFAULT);
+                }
+            }
+        }
     }
 
-    private static Action setUp(JmxExporterTestEnvironment environment) {
-        return Direct.builder("setUp")
-                .runnable(context -> {
-                    Network network = Network.newNetwork();
-                    network.getId();
-                    environment.initialize(CompleteHttpServerConfigurationTest.class, network);
-                    var store = context.getStore();
-                    store.put(NETWORK_KEY, network);
-                    store.put(ENVIRONMENT_KEY, environment);
-                })
-                .build();
+    public void testOpenMetricsTextMetrics() throws IOException {
+        String url = environment.getUrl(JmxExporterPath.METRICS);
+
+        for (String username : TEST_USERNAMES) {
+            for (String password : TEST_PASSWORDS) {
+                int expectedStatusCode = 401;
+
+                if (VALID_USERNAME.equals(username) && VALID_PASSWORD.equals(password)) {
+                    expectedStatusCode = 200;
+                }
+
+                HttpRequest httpRequest = HttpRequest.builder()
+                        .url(url)
+                        .basicAuthentication(username, password)
+                        .header(HttpHeader.ACCEPT, MetricsContentType.OPEN_METRICS_TEXT_METRICS.toString())
+                        .build();
+
+                HttpResponse httpResponse = HttpClient.sendRequest(httpRequest);
+
+                if (expectedStatusCode == 401) {
+                    assertThat(httpResponse.statusCode()).isEqualTo(401);
+                } else {
+                    assertMetricsResponse(httpResponse, MetricsContentType.OPEN_METRICS_TEXT_METRICS);
+                }
+            }
+        }
     }
 
-    private static Action testHealthy() {
-        return Direct.builder("testHealthy")
-                .runnable(context -> {
-                    JmxExporterTestEnvironment environment = getEnvironment(context);
-                    String url = environment.getUrl(JmxExporterPath.HEALTHY);
+    public void testPrometheusTextMetrics() throws IOException {
+        String url = environment.getUrl(JmxExporterPath.METRICS);
 
-                    for (String username : TEST_USERNAMES) {
-                        for (String password : TEST_PASSWORDS) {
-                            int expectedStatusCode = 401;
+        for (String username : TEST_USERNAMES) {
+            for (String password : TEST_PASSWORDS) {
+                int expectedStatusCode = 401;
 
-                            if (VALID_USERNAME.equals(username) && VALID_PASSWORD.equals(password)) {
-                                expectedStatusCode = 200;
-                            }
+                if (VALID_USERNAME.equals(username) && VALID_PASSWORD.equals(password)) {
+                    expectedStatusCode = 200;
+                }
 
-                            HttpRequest httpRequest = HttpRequest.builder()
-                                    .url(url)
-                                    .basicAuthentication(username, password)
-                                    .build();
+                HttpRequest httpRequest = HttpRequest.builder()
+                        .url(url)
+                        .basicAuthentication(username, password)
+                        .header(HttpHeader.ACCEPT, MetricsContentType.PROMETHEUS_TEXT_METRICS.toString())
+                        .build();
 
-                            HttpResponse httpResponse = HttpClient.sendRequest(httpRequest);
+                HttpResponse httpResponse = HttpClient.sendRequest(httpRequest);
 
-                            assertThat(httpResponse.statusCode()).isEqualTo(expectedStatusCode);
-                        }
-                    }
-                })
-                .build();
+                if (expectedStatusCode == 401) {
+                    assertThat(httpResponse.statusCode()).isEqualTo(401);
+                } else {
+                    assertMetricsResponse(httpResponse, MetricsContentType.PROMETHEUS_TEXT_METRICS);
+                }
+            }
+        }
     }
 
-    private static Action testDefaultTextMetrics() {
-        return Direct.builder("testDefaultTextMetrics")
-                .runnable(context -> {
-                    JmxExporterTestEnvironment environment = getEnvironment(context);
-                    String url = environment.getUrl(JmxExporterPath.METRICS);
+    public void testPrometheusProtobufMetrics() throws IOException {
+        String url = environment.getUrl(JmxExporterPath.METRICS);
 
-                    for (String username : TEST_USERNAMES) {
-                        for (String password : TEST_PASSWORDS) {
-                            int expectedStatusCode = 401;
+        for (String username : TEST_USERNAMES) {
+            for (String password : TEST_PASSWORDS) {
+                int expectedStatusCode = 401;
 
-                            if (VALID_USERNAME.equals(username) && VALID_PASSWORD.equals(password)) {
-                                expectedStatusCode = 200;
-                            }
+                if (VALID_USERNAME.equals(username) && VALID_PASSWORD.equals(password)) {
+                    expectedStatusCode = 200;
+                }
 
-                            HttpRequest httpRequest = HttpRequest.builder()
-                                    .url(url)
-                                    .basicAuthentication(username, password)
-                                    .build();
+                HttpRequest httpRequest = HttpRequest.builder()
+                        .url(url)
+                        .basicAuthentication(username, password)
+                        .header(HttpHeader.ACCEPT, MetricsContentType.PROMETHEUS_PROTOBUF_METRICS.toString())
+                        .build();
 
-                            HttpResponse httpResponse = HttpClient.sendRequest(httpRequest);
+                HttpResponse httpResponse = HttpClient.sendRequest(httpRequest);
 
-                            if (expectedStatusCode == 401) {
-                                assertThat(httpResponse.statusCode()).isEqualTo(401);
-                            } else {
-                                assertMetricsResponse(environment, httpResponse, MetricsContentType.DEFAULT);
-                            }
-                        }
-                    }
-                })
-                .build();
+                if (expectedStatusCode == 401) {
+                    assertThat(httpResponse.statusCode()).isEqualTo(401);
+                } else {
+                    assertMetricsResponse(httpResponse, MetricsContentType.PROMETHEUS_PROTOBUF_METRICS);
+                }
+            }
+        }
     }
 
-    private static Action testOpenMetricsTextMetrics() {
-        return Direct.builder("testOpenMetricsTextMetrics")
-                .runnable(context -> {
-                    JmxExporterTestEnvironment environment = getEnvironment(context);
-                    String url = environment.getUrl(JmxExporterPath.METRICS);
-
-                    for (String username : TEST_USERNAMES) {
-                        for (String password : TEST_PASSWORDS) {
-                            int expectedStatusCode = 401;
-
-                            if (VALID_USERNAME.equals(username) && VALID_PASSWORD.equals(password)) {
-                                expectedStatusCode = 200;
-                            }
-
-                            HttpRequest httpRequest = HttpRequest.builder()
-                                    .url(url)
-                                    .basicAuthentication(username, password)
-                                    .header(HttpHeader.ACCEPT, MetricsContentType.OPEN_METRICS_TEXT_METRICS.toString())
-                                    .build();
-
-                            HttpResponse httpResponse = HttpClient.sendRequest(httpRequest);
-
-                            if (expectedStatusCode == 401) {
-                                assertThat(httpResponse.statusCode()).isEqualTo(401);
-                            } else {
-                                assertMetricsResponse(
-                                        environment, httpResponse, MetricsContentType.OPEN_METRICS_TEXT_METRICS);
-                            }
-                        }
-                    }
-                })
-                .build();
+    public void tearDown() throws Throwable {
+        environment.close();
     }
 
-    private static Action testPrometheusTextMetrics() {
-        return Direct.builder("testPrometheusTextMetrics")
-                .runnable(context -> {
-                    JmxExporterTestEnvironment environment = getEnvironment(context);
-                    String url = environment.getUrl(JmxExporterPath.METRICS);
-
-                    for (String username : TEST_USERNAMES) {
-                        for (String password : TEST_PASSWORDS) {
-                            int expectedStatusCode = 401;
-
-                            if (VALID_USERNAME.equals(username) && VALID_PASSWORD.equals(password)) {
-                                expectedStatusCode = 200;
-                            }
-
-                            HttpRequest httpRequest = HttpRequest.builder()
-                                    .url(url)
-                                    .basicAuthentication(username, password)
-                                    .header(HttpHeader.ACCEPT, MetricsContentType.PROMETHEUS_TEXT_METRICS.toString())
-                                    .build();
-
-                            HttpResponse httpResponse = HttpClient.sendRequest(httpRequest);
-
-                            if (expectedStatusCode == 401) {
-                                assertThat(httpResponse.statusCode()).isEqualTo(401);
-                            } else {
-                                assertMetricsResponse(
-                                        environment, httpResponse, MetricsContentType.PROMETHEUS_TEXT_METRICS);
-                            }
-                        }
-                    }
-                })
-                .build();
-    }
-
-    private static Action testPrometheusProtobufMetrics() {
-        return Direct.builder("testPrometheusProtobufMetrics")
-                .runnable(context -> {
-                    JmxExporterTestEnvironment environment = getEnvironment(context);
-                    String url = environment.getUrl(JmxExporterPath.METRICS);
-
-                    for (String username : TEST_USERNAMES) {
-                        for (String password : TEST_PASSWORDS) {
-                            int expectedStatusCode = 401;
-
-                            if (VALID_USERNAME.equals(username) && VALID_PASSWORD.equals(password)) {
-                                expectedStatusCode = 200;
-                            }
-
-                            HttpRequest httpRequest = HttpRequest.builder()
-                                    .url(url)
-                                    .basicAuthentication(username, password)
-                                    .header(
-                                            HttpHeader.ACCEPT,
-                                            MetricsContentType.PROMETHEUS_PROTOBUF_METRICS.toString())
-                                    .build();
-
-                            HttpResponse httpResponse = HttpClient.sendRequest(httpRequest);
-
-                            if (expectedStatusCode == 401) {
-                                assertThat(httpResponse.statusCode()).isEqualTo(401);
-                            } else {
-                                assertMetricsResponse(
-                                        environment, httpResponse, MetricsContentType.PROMETHEUS_PROTOBUF_METRICS);
-                            }
-                        }
-                    }
-                })
-                .build();
-    }
-
-    private static Action tearDown() {
-        return Direct.builder("tearDown")
-                .runnable(context -> {
-                    var store = context.getStore();
-                    Network network = store.remove(NETWORK_KEY, Network.class).orElse(null);
-                    JmxExporterTestEnvironment environment = store.remove(
-                                    ENVIRONMENT_KEY, JmxExporterTestEnvironment.class)
-                            .orElse(null);
-
-                    if (network != null && environment != null) {
-                        Cleanup.of(Cleanup.Mode.FORWARD)
-                                .addCloseable(environment)
-                                .addCloseable(network)
-                                .runAndThrow();
-                    }
-                })
-                .build();
-    }
-
-    private static JmxExporterTestEnvironment getEnvironment(Context context) {
-        return context.getParent()
-                .getStore()
-                .get(ENVIRONMENT_KEY, JmxExporterTestEnvironment.class)
-                .orElseThrow();
-    }
-
-    private static void assertMetricsResponse(
-            JmxExporterTestEnvironment jmxExporterTestEnvironment,
-            HttpResponse httpResponse,
-            MetricsContentType metricsContentType) {
+    private void assertMetricsResponse(HttpResponse httpResponse, MetricsContentType metricsContentType) {
         assertMetricsContentType(httpResponse, metricsContentType);
 
         Map<String, Collection<Metric>> metrics = MetricsParser.parseMap(httpResponse);
 
-        boolean isJmxExporterModeJavaAgent =
-                jmxExporterTestEnvironment.getJmxExporterMode() == JmxExporterMode.JavaAgent;
+        boolean isJmxExporterModeJavaAgent = environment.getJmxExporterMode() == JmxExporterMode.JavaAgent;
 
-        String buildInfoName = jmxExporterTestEnvironment.getJmxExporterMode().getBuildInfoName();
+        String buildInfoName = environment.getJmxExporterMode().getBuildInfoName();
 
         assertMetric(metrics)
                 .ofType(Metric.Type.GAUGE)
